src/InputTextFloatingLabel/InputTextFloatingLabel.scss
/* @description Generates styles for the InputTextFloatingLabel component */
@import '../globals/sass/helpers-all';
$InputFloatingLabel-transition: 100ms ease;
$InputFloatingLabel-widthOffset: 3rem -$inputs_padding-lg-horizontal;
@mixin hasActionButton() {
    width: calc(100% - #{$InputFloatingLabel-widthOffset});
}

.InputWrapper {
    @include sharedInputBaseStyles();
    @include sharedTextInputs();
    @include inputThemes();

    min-height: rem-calc(52);
    padding: 0 $inputs_padding-lg-horizontal;

    font-size: rem-calc(16);

    transition: all $InputFloatingLabel-transition;

    &.hasIcon {
        padding-left: $input_has-icon-padding-lg;
    }
}

.InputLabel {
    display: block;
    overflow: hidden;

    width: 100%;
    margin: 0;
    padding: 0 rem-calc(8);

    color: $RegentGray;

    transition: all $InputFloatingLabel-transition;
    transform: translateY(rem-calc(16));
    white-space: nowrap;
    letter-spacing: rem-calc(0.4);
    text-overflow: ellipsis;

    &.isActive {
        overflow: visible;

        padding: rem-calc(6) rem-calc(8) 0;

        font-size: rem-calc(13);
        font-weight: $FontWeightMedium;

        transform: translateY(0);
        white-space: inherit;
        text-overflow: inherit;
    }
}

.Input {
    overflow: hidden;

    width: 100%;
    height: 0;
    margin: 0;
    padding: 0;

    font-family: $FontFamily;
    font-size: rem-calc(16);

    opacity: 0.1;
    border: 0;
    outline: 0;
    background: transparent;

    transition: height $InputFloatingLabel-transition,
    padding $InputFloatingLabel-transition,
    opacity 50ms ease;



    &.defaultTheme {
        color: $inputs_text-color;
    }

    &.darkTheme {
        color: $inputs_text-color-dark;
    }

    &::placeholder {
        font-size: rem-calc(16);

        color: $inputs_placeholder-color;
    }

    &.isActive {
        height: rem-calc(28);
        padding: rem-calc(4) rem-calc(8) rem-calc(8);

        opacity: 1;

        transition: height $InputFloatingLabel-transition,
        padding $InputFloatingLabel-transition,
        opacity 200ms ease 150ms;

        &.hasActionButton {
            @include hasActionButton();

            padding-right: rem-calc(28); // adjust for possible password manager icon
        }
    }
}



.ToggleButton {
    position: absolute;
    top: 0.125rem;
    right: 0.125rem;

    width: 3rem;
    height: 3rem;
    padding-top: rem-calc(4);

    border: 0;
    background: transparent;

    svg {
        width: 1.5rem;
        height: 1.5rem;

        * {
            fill: $RegentGray;
        }
    }

    &:hover {
        cursor: pointer;

        svg * {
            fill: $AstroGranite;
        }
    }

    &:active {
        transform: scale(0.9);
    }
}

